tests/NormalTests/paczka1/small_fuzzy/14134713.err
Error in line 1: L7W A509 26,0
Error in line 2: 2QiPSsNe S818 38,8
Error in line 15: mCY5wLop A509 15,1
